# docs/swagger.yaml
@@ -1,12 +1,27 @@
 basePath: /
 definitions:
+  domain.Customer:
+    properties:
+      cpf:
+        type: string
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
   domain.Order:
     properties:
       created_at:
         type: string
+      customer:
+        $ref: '#/definitions/domain.Customer'
       id:
-        type: string
-      id_customer:
         type: string
       notification_attempts:
         type: integer
@@ -26,11 +41,19 @@ definitions:
     - PENDING
     - RECEIVED
     - PAYMENT_FAILED
+    - IN_PREPARATION
+    - READY
+    - COMPLETED
+    - CANCELLED
     type: string
     x-enum-varnames:
     - PENDING
     - RECEIVED
     - PAYMENT_FAILED
+    - IN_PREPARATION
+    - READY
+    - COMPLETED
+    - CANCELLED
   domain.Product:
     properties:
       created_at:
@@ -94,6 +117,11 @@ definitions:
         items:
           type: string
         type: array
+    type: object
+  services.UpdateStatusDTO:
+    properties:
+      status:
+        type: string
     type: object
 host: localhost:8080
 info:
@@ -317,6 +345,40 @@ paths:
               type: string
             type: object
       summary: Delete an order
+      tags:
+      - orders
+    put:
+      description: update order status.
+      parameters:
+      - description: orderId
+        in: path
+        name: orderId
+        required: true
+        type: string
+      - description: UpdateStatusDTO object
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/services.UpdateStatusDTO'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: UpdateOrder update order status.
       tags:
       - orders
   /products:
